--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
                     <p>Spicy jalapeno bacon ipsum dolor amet prosciutto tail bresaola, ham ground round jerky hamburger pork loin flank picanha alcatra doner fatback ball tip spare ribs. Filet mignon boudin tail ham sausage beef biltong ham hock. Drumstick
                         tri-tip capicola strip steak, salami jerky andouille kielbasa porchetta alcatra shank venison bresaola. Pastrami burgdoggen cow t-bone frankfurter tenderloin alcatra ball tip capicola strip steak. Beef bresaola chuck tail picanha
                         ham, strip steak shoulder doner porchetta short loin andouille ball tip.</p>
+                    <h2>Interests</h2>
 
                     <p>Cupim andouille boudin tenderloin kielbasa leberkas doner shank pancetta spare ribs bacon. Turkey short loin landjaeger pork chop jerky. Burgdoggen porchetta pancetta, spare ribs kevin meatloaf flank bacon rump strip steak picanha.
                         Prosciutto jerky meatloaf jowl pastrami t-bone beef ribs kevin.</p>
+                    <h2>Remix</h2>
+                    <h2>Reflection</h2>
 
                 </div>
                 <footer>
