--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Life is good</h1>
-                    <img src="https://www.google.com/search?q=virginia+tech+logo&espv=2&biw=1147&bih=652&tbm=isch&imgil=fgXd5aYpgkmGgM%253A%253BF6P3_GDFUYfQHM%253Bhttps%25253A%25252F%25252Fcommons.wikimedia.org%25252Fwiki%25252FFile%25253AVT_logo.svg&source=iu&pf=m&fir=fgXd5aYpgkmGgM%253A%252CF6P3_GDFUYfQHM%252C_&usg=__8vobDqkCEvhw3mM_1b5x9bISoSs%3D&ved=0ahUKEwi1hIrq4_7RAhXCZCYKHdBeArEQyjcIMw&ei=BiiaWLXpM8LJmQHQvYmICw#imgrc=fgXd5aYpgkmGgM:" />
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
                     <h2>Introduction</h2>
                     <p>Spicy jalapeno bacon ipsum dolor amet prosciutto tail bresaola, ham ground round jerky hamburger pork loin flank picanha alcatra doner fatback ball tip spare ribs. Filet mignon boudin tail ham sausage beef biltong ham hock. Drumstick
                         tri-tip capicola strip steak, salami jerky andouille kielbasa porchetta alcatra shank venison bresaola. Pastrami burgdoggen cow t-bone frankfurter tenderloin alcatra ball tip capicola strip steak. Beef bresaola chuck tail picanha
