--- a/remix.html
+++ b/remix.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ben</title>
+    <title>Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,7 +26,7 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-                    <a class="navbar-brand" href="index.html">VT Shaped Student</a>
+                    <a class="navbar-brand" href="index.html">Bacon</a>
                 </div>
             </div>
         </div>
@@ -35,26 +35,17 @@
             <div class="row row-offcanvas row-offcanvas-left">
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
-                        <li>Home</li>
-                        <li><a href="audio.html">Interests</a></li>
-                        <li><a href="video.html">Remix</a></li>
-                        <li><a href="">Reflection</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="audio.html">Audio</a></li>
+                        <li>Video</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Life is good</h1>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
-                    <h2>Introduction</h2>
-                    <p>Spicy jalapeno bacon ipsum dolor amet prosciutto tail bresaola, ham ground round jerky hamburger pork loin flank picanha alcatra doner fatback ball tip spare ribs. Filet mignon boudin tail ham sausage beef biltong ham hock. Drumstick
-                        tri-tip capicola strip steak, salami jerky andouille kielbasa porchetta alcatra shank venison bresaola. Pastrami burgdoggen cow t-bone frankfurter tenderloin alcatra ball tip capicola strip steak. Beef bresaola chuck tail picanha
-                        ham, strip steak shoulder doner porchetta short loin andouille ball tip.</p>
-                    <h2>Interests</h2>
-                    <p>Cupim andouille boudin tenderloin kielbasa leberkas doner shank pancetta spare ribs bacon. Turkey short loin landjaeger pork chop jerky. Burgdoggen porchetta pancetta, spare ribs kevin meatloaf flank bacon rump strip steak picanha.
-                        Prosciutto jerky meatloaf jowl pastrami t-bone beef ribs kevin.</p>
-                    <h2>Remix</h2>
-                    <p>asld;flasdhgoiashrgoihargoi</p>
-                    <h2>Reflection</h2>
-                    <p>asodihgaoirhgoairehgoaierhgoiaergh</p>
+                    <h1>Video</h1>
+
+                    <p>This is a video of Sofia dancing... probably in mid 2016.</p>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PcyUflwStHU" frameborder="0" allowfullscreen></iframe>
 
                 </div>
                 <footer>
