--- a/interests.html
+++ b/interests.html
@@ -35,9 +35,10 @@
             <div class="row row-offcanvas row-offcanvas-left">
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li>Audio</li>
-                        <li><a href="video.html">Video</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li>Interests</li>
+                      <li><a href="remix.html">Remix</a></li>
+                      <li><a href="reflection.heml">Reflection</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
