--- a/remix.html
+++ b/remix.html
@@ -35,9 +35,10 @@
             <div class="row row-offcanvas row-offcanvas-left">
                 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
                     <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="audio.html">Audio</a></li>
-                        <li>Video</li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="interests.html">Interests</a></li>
+                      <li>Remix</li>
+                      <li><a href="reflection.heml">Reflection</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
