--- a/interests.html
+++ b/interests.html
@@ -38,7 +38,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li>Interests</li>
                       <li><a href="remix.html">Remix</a></li>
-                      <li><a href="reflection.heml">Reflection</a></li>
+                      <li><a href="reflection.html">Reflection</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
