--- a/interests.html
+++ b/interests.html
@@ -42,11 +42,11 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Audio clip</h1>
+                    <h1>Interests</h1>
 
                     <p>This is an audio clip of Sofia laughing when she was a baby.</p>
 
-                    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/227959739&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
 
                 </div>
                 <footer>
