--- a/remix.html
+++ b/remix.html
@@ -42,12 +42,11 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Video</h1>
+                    <h1>Remix</h1>
 
                     <p>This is a video of Sofia dancing... probably in mid 2016.</p>
 
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PcyUflwStHU" frameborder="0" allowfullscreen></iframe>
-
+                    
                 </div>
                 <footer>
                     <div class="container text-muted">
