--- a/interests.html
+++ b/interests.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Interests</h1>
-
+                    <img src="http://www.davison.com/images/buildline/cameraman.jpg" />
                     <p>This is an audio clip of Sofia laughing when she was a baby.</p>
 
 
