--- a/reflection.html
+++ b/reflection.html
@@ -43,10 +43,10 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Reflection</h1>
-
+                    <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
                     <p>This is a video of Sofia dancing... probably in mid 2016.</p>
 
-                    
+
 
                 </div>
                 <footer>
