--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>VT Shaped Student</title>
+    <title>VT Shaped Student Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -44,7 +44,7 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Introduction</h1>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
-                    
+
                     <p>Spicy jalapeno bacon ipsum dolor amet prosciutto tail bresaola, ham ground round jerky hamburger pork loin flank picanha alcatra doner fatback ball tip spare ribs. Filet mignon boudin tail ham sausage beef biltong ham hock. Drumstick
                         tri-tip capicola strip steak, salami jerky andouille kielbasa porchetta alcatra shank venison bresaola. Pastrami burgdoggen cow t-bone frankfurter tenderloin alcatra ball tip capicola strip steak. Beef bresaola chuck tail picanha
                         ham, strip steak shoulder doner porchetta short loin andouille ball tip.</p>
