--- a/remix.html
+++ b/remix.html
@@ -26,7 +26,7 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-                    <a class="navbar-brand" href="index.html">Bacon</a>
+                    <a class="navbar-brand" href="index.html">VT Shaped Student</a>
                 </div>
             </div>
         </div>
