--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
                     <h1>Introduction</h1>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
 
-                    <p>Spicy jalapeno bacon ipsum dolor amet prosciutto tail bresaola, ham ground round jerky hamburger pork loin flank picanha alcatra doner fatback ball tip spare ribs. Filet mignon boudin tail ham sausage beef biltong ham hock. Drumstick
-                        tri-tip capicola strip steak, salami jerky andouille kielbasa porchetta alcatra shank venison bresaola. Pastrami burgdoggen cow t-bone frankfurter tenderloin alcatra ball tip capicola strip steak. Beef bresaola chuck tail picanha
-                        ham, strip steak shoulder doner porchetta short loin andouille ball tip.</p>
-
+                    <p>This page was created by Ben Anderson for Comm 3844 at Virginia Tech.  Coming into this class, I had no coding experience at all.  I was a little worried when I heard we would be creating websites and webpages in class because I had never done it before.  I am hoping that by the end of this course, I feel comfortable with basic html and css coding and can create basic websites and webpages, using templates.
 
                 </div>
                 <footer>
