--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1>Introduction</h1>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
 
-                    <p>This page was created by Ben Anderson for Comm 3844 at Virginia Tech.  Coming into this class, I had no coding experience at all.  I was a little worried when I heard we would be creating websites and webpages in class because I had never done it before.  I am hoping that by the end of this course, I feel comfortable with basic html and css coding and can create basic websites and webpages, using templates.
+                    <p>This page was created by Ben Anderson for Comm 3844 at Virginia Tech.  Coming into this class, I had no coding experience at all, so I was a little worried when I heard we would be creating websites and webpages.  I am hoping that by the end of this course, I feel comfortable with basic html and css coding and can create basic websites and webpages, using templates.
 
                 </div>
                 <footer>
