--- a/reflection.html
+++ b/reflection.html
@@ -44,7 +44,7 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Reflection</h1>
                     <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
-                    <p>asdlkfasdgharuigariuogb</p>
+                    <p> Coming into this year, I had no experience with computer coding or </p>
 
 
 
