--- a/reflection.html
+++ b/reflection.html
@@ -44,7 +44,7 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Reflection</h1>
                     <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
-                    <p> Coming into this year, I had no experience with computer coding or </p>
+                    <p> Coming into this year, I had no experience with computer coding or digital writing.  Coding always seemed like some sort of magical language that only computer geniuses could use to create the websites that I used every day.  It really surprised me how easy it really was to code in html, once it was broken down into more managable sections of study.  </p>
 
 
 
