--- a/reflection.html
+++ b/reflection.html
@@ -44,7 +44,8 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Reflection</h1>
                     <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
-                    <p> Coming into this year, I had no experience with computer coding or digital writing.  Coding always seemed like some sort of magical language that only computer geniuses could use to create the websites that I used every day.  It really surprised me how easy it really was to code in html, once it was broken down into more managable sections of study.  </p>
+                    <p> Coming into this year, I had no experience with computer coding or digital writing.  Coding always seemed like some sort of magical language that only computer geniuses could use to create the websites that I used every day.  It really surprised me how easy it really was to code in html, once it was broken down into more manageable sections.  What I found most interesting and gratifying was seeing my work on a website using my new html address.  It was awesome to see my own work in something that I did not know much about pay off.  I found it very interesting to see how simple making a basic webpage is.  With a simple template, you can make a webpage using simple headings a paragraphs.  I liked learning the individual commands to create different pieces of my webpages.</p>
+                    <p>I definitly thought that the hardest part of our first module on coding was all the linking.  I got most confused when we had to </p>
 
 
 
