--- a/reflection.html
+++ b/reflection.html
@@ -45,7 +45,7 @@
                     <h1>Reflection</h1>
                     <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
                     <p> Coming into this year, I had no experience with computer coding or digital writing.  Coding always seemed like some sort of magical language that only computer geniuses could use to create the websites that I used every day.  It really surprised me how easy it really was to code in html, once it was broken down into more manageable sections.  What I found most interesting and gratifying was seeing my work on a website using my new html address.  It was awesome to see my own work in something that I did not know much about pay off.  I found it very interesting to see how simple making a basic webpage is.  With a simple template, you can make a webpage using simple headings a paragraphs.  I liked learning the individual commands to create different pieces of my webpages.</p>
-                    <p>I definitly thought that the hardest part of our first module on coding was all the linking.  I got most confused when we had to </p>
+                    <p>I definitely thought that the hardest part of our first module on coding was all the linking.  I got most confused when we had to insert the links to pictures or link css projects.  Creating the individual pages was not very difficult when I could use my old works as references for the different types of commands and codes, but I never fully mastered the links.  It made it easier when I could use a template for my work because then I saw exactly where my links needed to go and how to code them.  All I had to do was add the new name to the page I was linking or the link to the image I was using.</p>
 
 
 
