--- a/interests.html
+++ b/interests.html
@@ -39,11 +39,14 @@
                       <li>Interests</li>
                       <li><a href="remix.html">Remix</a></li>
                       <li><a href="reflection.html">Reflection</a></li>
+                      <li><a href="video.html">Video</a></li>
+                      <li><a href="audio.html">Podcast</a></li>
+                      <li><a href="design.html">Design</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Interests</h1>
-                    <img src="http://www.davison.com/images/buildline/cameraman.jpg" />
+                    <img src="https://media.giphy.com/media/nwQtsn4gHULwk/giphy.gif" />
                     <p>Here at Virginia Tech, I am involved in a couple of activities.  I am in a campus ministry, called Chi Alpha.  I meet weekly in large and small group settings, and I have made some of my best friends here.  Most of my time, however, is spent working for my internship with HokieVision.  Through this internship, I help with all the filming and media production for Virginia Tech Athletics.  I do filming, video editing, video show production, and many more tasks.  I am sure that my new digital writing skills will help with all I do with HokieVision.  The time spent working here contributes to the informal communal learning section of the VT shaped student.  I am learning through all kinds of hands on experience in the same field that I hope to work in someday.</p>
 
 
