--- a/remix.html
+++ b/remix.html
@@ -39,6 +39,9 @@
                       <li><a href="interests.html">Interests</a></li>
                       <li>Remix</li>
                       <li><a href="reflection.html">Reflection</a></li>
+                      <li><a href="video.html">Video</a></li>
+                      <li><a href="audio.html">Podcast</a></li>
+                      <li><a href="design.html">Design</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
