--- a/audio.html
+++ b/audio.html
@@ -38,9 +38,9 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="interests.html">Interests</a></li>
                       <li><a href="remix.html">Remix</a></li>
-                      <li>Reflection</li>
+                      <li><a href="reflection.html">Reflection</a></li>
                       <li><a href="video.html">Video</a></li>
-                      <li><a href="audio.html">Podcast</a></li>
+                      <li>Podcast</li>
                       <li><a href="design.html">Design</a></li>
                     </ul>
                 </div>
