--- a/design.html
+++ b/design.html
@@ -38,10 +38,10 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="interests.html">Interests</a></li>
                       <li><a href="remix.html">Remix</a></li>
-                      <li>Reflection</li>
+                      <li><a href="reflection.html">Reflection</a></li>
                       <li><a href="video.html">Video</a></li>
                       <li><a href="audio.html">Podcast</a></li>
-                      <li><a href="design.html">Design</a></li>
+                      <li>Design</li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
