--- a/video.html
+++ b/video.html
@@ -38,7 +38,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="interests.html">Interests</a></li>
                       <li><a href="remix.html">Remix</a></li>
-                      <li><a href="Reflection">Reflection</a></li>
+                      <li><a href="Reflection.html">Reflection</a></li>
                       <li>Video</li>
                       <li><a href="audio.html">Podcast</a></li>
                       <li><a href="design.html">Design</a></li>
