--- a/video.html
+++ b/video.html
@@ -45,7 +45,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <h1>Reflection</h1>
+                    <h1>Video</h1>
                     <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/auVrp12JGHM?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                     <p></p>
 
