--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1>Introduction</h1>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/VT_logo.svg/2000px-VT_logo.svg.png" />
 
-                    <p>This page was created by Ben Anderson for English 3844 at Virginia Tech.  Coming into this class, I had no coding experience at all, so I was a little worried when I heard we would be creating websites and webpages.  I am hoping that by the end of this course, I feel comfortable with basic html and css coding and can create basic websites and webpages, using templates.
+                    <p>This page was created by Ben Anderson for English 3844 at Virginia Tech.  Coming into this class, I had no coding experience at all, so I was a little worried when I heard we would be creating websites and webpages.  Looking back now at the end of the semester, I am amazed at the progress I have made.  I now feel comfortable creating basic html and css pages and turning them into websites.  I have also learned a lot about new strategies for creating podcasts and additional tips on making videos.  I hope that these new skills help me down the road in my future as a writer and all other endeavors, both in my academic and career path.
 
                 </div>
                 <footer>
