--- a/interests.html
+++ b/interests.html
@@ -46,8 +46,10 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Interests</h1>
                     <img src="http://www.satellitetoday.com/long-form-stories/ultra-hd-coming-to-a-screen-near-you/images/camera-slideshow/DSC02652.jpg" />
-                    <p>Here at Virginia Tech, I am involved in a couple of activities.  I am in a campus ministry, called Chi Alpha.  I meet weekly in large and small group settings, and I have made some of my best friends here.  Most of my time, however, is spent working for my internship with HokieVision.  Through this internship, I help with all the filming and media production for Virginia Tech Athletics.  I do filming, video editing, video show production, and many more tasks.  I am sure that my new digital writing skills will help with all I do with HokieVision.  The time spent working here contributes to the informal communal learning section of the VT shaped student.  I am learning through all kinds of hands on experience in the same field that I hope to work in someday.</p>
+                    <p>Here at Virginia Tech, I am involved in a couple of activities.  I am in a campus ministry, called Chi Alpha.  I meet weekly in large and small group settings, and I have made some of my best friends here.  Most of my time, however, is spent working for my internship with HokieVision.  Through this internship, I help with all the filming and media production for Virginia Tech Athletics.  I do filming, video editing, video show production, and many more tasks.  The time spent working here contributes to the informal communal learning section of the VT shaped student.  I am learning through all kinds of hands on experience in the same field that I hope to work in someday.</p>
 
+                    <h2>Goals</h2>
+                    <p>I hope that my new digital writing skills will help me to achieve my future goals.  For now, they can help me to be more productive with my HokieVision internship, giving me a technological advantage in projects I work on.  In the future, it can give me an edge when looking and applying for jobs.  Not many people in the communications and media department have much experience with html, so these skills should set me apart from those others in the field.
 
 
                 </div>
