--- a/design.html
+++ b/design.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Design</h1>
-                    <img src="https://gregmiller21stcenturyleadership.files.wordpress.com/2012/05/reflection-s1llcr11.jpg" />
+                    <img src="https://s-media-cache-ak0.pinimg.com/originals/9d/1b/ac/9d1bacf61ad3a6a8e2592fde300c238a.jpg"/>
                     <p></p>
 
 
