--- a/design.html
+++ b/design.html
@@ -46,8 +46,9 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Design</h1>
                     <img src="https://s-media-cache-ak0.pinimg.com/originals/9d/1b/ac/9d1bacf61ad3a6a8e2592fde300c238a.jpg"/>
-                    <p></p>
-
+                    <h2>Point Guard</h2>
+                    <p>The first man on the roster is the point guard, number 3, the point guard, T. Horizontal.  He has the best technical skills on the team.  He has great fundamentals and very rarely makes skill related mistakes.  He has a great understanding of the game itself and sees the floor well.  He can remember plays and runs the floor.  Where he struggles is in his personal skills.  He sometimes sees the game as too technical, and does not always play as well with others.  He can be a bit of a ball hog, and many times only focuses on when his teammates mess up on the court.  Overall, he is a solid point guard with great technique, but just needs to improve his interpersonal skills.</p>
+                    <h2>Shooting Guard</h2>
 
                 </div>
                 <footer>
