--- a/video.html
+++ b/video.html
@@ -45,8 +45,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-9">
                     <h1>Video</h1>
-                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/auVrp12JGHM?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-                    <p></p>
+                    <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/geMOh9-mvNQ?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                    <p>This video displays what a V-Shaped Student should look like.  It shows real-life examples of balanced learning, in and out of the classroom.  All three of the students here </p>
 
 
                 </div>
