--- a/video.html
+++ b/video.html
@@ -46,7 +46,10 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Video</h1>
                     <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/geMOh9-mvNQ?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-                    <p>This video displays what a V-Shaped Student should look like.  It shows real-life examples of balanced learning, in and out of the classroom.  All three of the students here </p>
+                    <p>This video displays what a V-Shaped Student should look like.  It shows real-life examples of balanced learning, in and out of the classroom.  All three of the students here are taking classes, teaching them some of the skills and knowledge they will need to work in their respective fields.  Along with this formal learning, though, each student balances this with their own type of informal learning.</p>
+                    <p>Drew, who wants to work as a sports columnist writes for the Collegiate Times' sports section.  He gets first hand experience, learning the skills he will need to possess out in the field someday.</p>
+                    <p>Ben, who wants to get a job in the sports broadcasting world, balances his learning in the classroom with his internship with HokieVision.  He gets to use the same equipment, software, and tools that he will be using in the field someday.  This experience is invaluable.</p>
+                    <p></p>
 
 
                 </div>
