--- a/audio.html
+++ b/audio.html
@@ -46,7 +46,8 @@
                 <div class="col-xs-12 col-sm-9">
                     <h1>Podcast</h1>
                     <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/314012835&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                    <p></p>
+                    <p>The podcast here demonstrates some of the problems that people face when trying to be a T-Shaped student.  Ben, an inventor, has created a new product, but he only looks at the technical side of things.  There are some technical flaws that he plans to attend to, but he does not even consider fixing the humanistic problems that the product faces.</p>
+                    <p>Megan, a tester and user of the product is the other way around.  She only thinks of the human part of things, but does not think of the technology behind the invention or the economics of it.  Drew, the host of the show, helps to make both parties see that they need to balance their thinking to include the technological thinking with the humanistic thinking.</p>
 
                 </div>
                 <footer>
