--- a/video.html
+++ b/video.html
@@ -37,7 +37,7 @@
                     <ul class="nav">
                       <li><a href="index.html">Home</a></li>
                       <li><a href="interests.html">Interests</a></li>
-                      <li><a href="Reflection.html">Reflection</a></li>
+                      <li><a href="reflection.html">Reflection</a></li>
                       <li>Video</li>
                       <li><a href="audio.html">Podcast</a></li>
                       <li><a href="design.html">Design</a></li>
